# AlphaStudio

./: .converter-complete-state.json  .dockerignore  .env.example  .gitattributes  .gitignore  .ux-ui-redesign-state.json  Dockerfile  README.md  REGISTRY_FIX.md  RUNTIME_VALIDATION.md  V3_CHANGELOG.md  docker-compose.yml  index.html  package-lock.json  package.json  playwright.config.js  vite.config.js
deploy/: Dockerfile.full-runtime
docs/: BUILD_AND_RUN_WINDOWS_LINUX.md  CONVERTER_PHASE_1_PLAN.md  DEPLOY_DOCKER_VPS.md  PDF_TOOLS_ARCHITECTURE.md  PDF_TOOLS_AUDIT.md  PDF_TOOLS_SETUP.md  PDF_TOOLS_TESTING.md  PDF_TOOLS_WEBUI_AUDIT.md  PDF_TOOLS_WEBUI_FINAL_REPORT.md  UX_UI_COMPONENT_MATRIX.md  UX_UI_REDESIGN_BASELINE.md  UX_UI_REDESIGN_BLUEPRINT.md  UX_UI_REDESIGN_COMPOSITION_AUDIT.md  UX_UI_REDESIGN_DECISIONS.md  UX_UI_REDESIGN_FINAL_REPORT.md  UX_UI_REDESIGN_TEST_REPORT.md  assets.md  job-engine.md  python-runtime.md  resumable-upload.md
e2e/: corrective-after-screenshots.spec.js  corrective-baseline-screenshots.spec.js  pdf-tools.spec.js  residual-quality.spec.js  residual-state-screenshots.spec.js
public/: manifest.webmanifest
python/: bridge.py  models.lock.json  pyproject.toml  requirements-ai.txt  requirements-core.txt  requirements-data.txt  requirements-documents.txt  requirements-ocr.txt  requirements-vision.txt
python/operations/: __init__.py  _models.py  background_removal.py  document_pdf.py  image_ops.py  json_transform.py  ocr_pdf.py  pdf_tables.py  summarize.py  table_transform.py  transcribe.py
python/tests/: __init__.py  test_bridge.py
(+438 files in other folders)
